--- a/Quiz.html
+++ b/Quiz.html
@@ -120,242 +120,122 @@
         <!-- Question 1 -->
         <div class="question" id="question1">
             <h4 class="questionNumber">1. Which two actors directed themselves in movies and won Oscars for Best Actor?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q1" value="0"> Al Pacino and Timothy Hutton</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q1" value="0">
-            </label>
-            <label>Al Pacino and Timothy Hutton</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q1" value="0">
-            </label>
-            <label>Jack Nicholson and Kevin Spacey</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q1" value="1">
-            </label>
-            <label class="corAns" id="q1">Laurence Olivier and Roberto Benigni</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q1" value="0">
-            </label>
-            <label>Tom Hanks and Paul Newman</label>
+            <label><input class="answer" type="radio" name="q1" value="0"> Jack Nicholson and Kevin Spacey</label>
+            <hr>
+            <label class="corAns" id="q1"><input class="answer" type="radio" name="q1" value="1"> Laurence Olivier and Roberto Benigni</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q1" value="0"> Tom Hanks and Paul Newman</label>
         </div>
         <!-- Question 2 -->
         <div class="question" id="question2">
             <h4 class="questionNumber">2. "After all, tomorrow is another day!" was the last line in which Oscar-winning Best Picture?</h4>
+            <hr class="hr">
+            <label class="corAns" id="q2"><input class="answer" type="radio" name="q2" value="1"> Gone With the Wind</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q2" value="1">
-            </label>
-            <label class="corAns" id="q2">Gone With the Wind</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q2" value="0">
-            </label>
-            <label>Great Expectations</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q2" value="0">
-            </label>
-            <label>Harold and Maude</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q2" value="0">
-            </label>
-            <label>The Matrix</label>
+            <label><input class="answer" type="radio" name="q2" value="0"> Great Expectations</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q2" value="0"> Harold and Maude</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q2" value="0"> The Matrix</label>
         </div>
         <!-- Question 3 -->
         <div class="question" id="question3">
             <h4 class="questionNumber">3. Who is the only person to win an Oscar for Best Director for the only movie he ever directed?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q3" value="0"> Bob Fosse</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q3" value="0">
-            </label>
-            <label>Bob Fosse</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q3" value="0">
-            </label>
-            <label>Frank Borzage</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q3" value="0">
-            </label>
-            <label>Leo McCarey</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q3" value="1">
-            </label>
-            <label class="corAns" id="q3">Jerome Robbins</label>
+            <label><input class="answer" type="radio" name="q3" value="0"> Frank Borzage</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q3" value="0"> Leo McCarey</label>
+            <hr>
+            <label class="corAns" id="q3"><input class="answer" type="radio" name="q3" value="1"> Jerome Robbins</label>
         </div>
         <!-- Question 4 -->
         <div class="question" id="question4">
             <h4 class="questionNumber">4. Who is the most nominated actor in Academy history?</h4>
+            <hr class="hr">
+            <label class="corAns" id="q4"><input class="answer" type="radio" name="q4" value="1"> Jack Nicholson</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q4" value="1">
-            </label>
-            <label class="corAns" id="q4">Jack Nicholson</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q4" value="0">
-            </label>
-            <label>Laurence Olivier</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q4" value="0">
-            </label>
-            <label>Spencer Tracy</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q4" value="0">
-            </label>
-            <label>Paul Newman</label>
+            <label><input class="answer" type="radio" name="q4" value="0"> Laurence Olivier</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q4" value="0"> Spencer Tracy</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q4" value="0"> Paul Newman</label>
         </div>
         <!-- Question 5 -->
         <div class="question" id="question5">
             <h4 class="questionNumber">5. In which movie was the Oscar-winning song "Do Not Forsake Me, Oh My Darlin'" prominently featured?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q5" value="0"> Butch Cassidy and the Sundance Kid (1969)</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q5" value="0">
-            </label>
-            <label>Butch Cassidy and the Sundance Kid (1969)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q5" value="0">
-            </label>
-            <label>Calamity Jane (1953)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q5" value="1">
-            </label>
-            <label class="corAns" id="q5">High Noon (1952)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q5" value="0">
-            </label>
-            <label>Song of the South (1946)</label>
+            <label><input class="answer" type="radio" name="q5" value="0"> Calamity Jane (1953)</label>
+            <hr>
+            <label class="corAns" id="q5"><input class="answer" type="radio" name="q5" value="1"> High Noon (1952)</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q5" value="0"> Song of the South (1946)</label>
         </div>
         <!-- Question 6 -->
         <div class="question" id="question6">
             <h4 class="questionNumber">6. What was the first Western to win the Academy Award for Best Picture?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q6" value="0"> Brokeback Mountain (2005)</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q6" value="0">
-            </label>
-            <label>Brokeback Mountain (2005)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q6" value="1">
-            </label>
-            <label class="corAns" id="q6">Cimarron (1930/31)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q6" value="0">
-            </label>
-            <label>The Last Wagon (1956)</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q6" value="0">
-            </label>
-            <label>Stagecoach (1939)</label>
+            <label class="corAns" id="q6"><input class="answer" type="radio" name="q6" value="1"> Cimarron (1930/31)</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q6" value="0"> The Last Wagon (1956)</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q6" value="0"> Stagecoach (1939)</label>
         </div>
         <!-- Question 7 -->
         <div class="question" id="question7">
             <h4 class="questionNumber">7. In the superhero movie Marvel's The Avengers (2012), what alien race threatened to invade New York?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q7" value="0"> The Mimics</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q7" value="0">
-            </label>
-            <label>The Mimics</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q7" value="1">
-            </label>
-            <label class="corAns" id="q7">The Chitauri</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q7" value="0">
-            </label>
-            <label>The Falleen</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q7" value="0">
-            </label>
-            <label>The Kaijus</label>
+            <label class="corAns" id="q7"><input class="answer" type="radio" name="q7" value="1"> The Chitauri</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q7" value="0"> The Falleen</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q7" value="0"> The Kaijus</label>
         </div>
         <!-- Question 8 -->
         <div class="question" id="question8">
             <h4 class="questionNumber">8.Who was the first victim of killer Michael Myers in John Carpenter's classic horror film Halloween (1978)?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q8" value="0"> Annie</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q8" value="0">
-            </label>
-            <label>Annie</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q8" value="0">
-            </label>
-            <label>Bob</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q8" value="1">
-            </label>
-            <label class="corAns" id="q8">Judith</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q8" value="0">
-            </label>
-            <label>Lynda</label>
+            <label><input class="answer" type="radio" name="q8" value="0"> Bob</label>
+            <hr>
+            <label class="corAns" id="q8"><input class="answer" type="radio" name="q8" value="1"> Judith</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q8" value="0"> Lynda</label>
         </div>
         <!-- Question 9 -->
         <div class="question" id="question9">
             <h4 class="questionNumber">9.Who was the evil lion in Disney's The Lion King (1994)?</h4>
+            <hr class="hr">
+            <label><input class="answer" type="radio" name="q9" value="0"> Mufasa</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q9" value="0">
-            </label>
-            <label>Mufasa</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q9" value="0">
-            </label>
-            <label>Nala</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q9" value="0">
-            </label>
-            <label>Simba</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q9" value="1">
-            </label>
-            <label class="corAns" id="q9">Scar</label>
+            <label><input class="answer" type="radio" name="q9" value="0"> Nala</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q9" value="0"> Simba</label>
+            <hr>
+            <label class="corAns" id="q9"><input class="answer" type="radio" name="q9" value="1"> Scar</label>
         </div>
         <!-- Question 10 -->
         <div class="question" id="question10">
             <h4 class="questionNumber">10.In Aliens (1986), what was the name of the "artificial person" or android?</h4>
+            <hr class="hr">
+            <label class="corAns" id="q10"><input class="answer" type="radio" name="q10" value="1"> Bishop</label>
             <hr>
-            <label>
-                <input class="answer" type="radio" name="q10" value="1">
-            </label>
-            <label class="corAns" id="q10">Bishop</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q10" value="0">
-            </label>
-            <label>Gorman</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q10" value="0">
-            </label>
-            <label>Hicks</label>
-            <br>
-            <label>
-                <input class="answer" type="radio" name="q10" value="0">
-            </label>
-            <label>Hudson</label>
+            <label><input class="answer" type="radio" name="q10" value="0"> Gorman</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q10" value="0"> Hicks</label>
+            <hr>
+            <label><input class="answer" type="radio" name="q10" value="0"> Hudson</label>
         </div>
         <hr>
         <!-- Question Box Buttons -->
